--- a/playbooks/build-disk.yml
+++ b/playbooks/build-disk.yml
@@ -32,6 +32,7 @@
           - gnupg
           - linux-image-amd64
           - linux-headers-amd64
+          - linux-headers-4.9.0-3-amd64
         state: present
 
     - name: Load aufs module
