--- a/playbooks/build-disk.yml
+++ b/playbooks/build-disk.yml
@@ -33,8 +33,8 @@
           - parted
           - e2fsprogs
           - gnupg
-          - linux-image-amd64
-          - linux-headers-amd64
+          #- linux-image-amd64
+          #- linux-headers-amd64
         state: present
 
     #- name: Load aufs module
